Fixed h2 colour to improve contrast

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 h2 {
-  color: #447ea7;
+  color: #6A9FC8;
 }
 
 header img  {
